--- a/src/shmemu/Makefile.am
+++ b/src/shmemu/Makefile.am
@@ -4,7 +4,8 @@ OTHER_CPPFLAGS            = -I../../include \
 				-I$(srcdir)/../shmemc \
 				-I$(srcdir)/uthash
 LIBSHMEMU_SOURCES         = hostname.c logger.c timer.c unitparse.c \
-				shmemu-init.c miscops.c deprecate.c
+				shmemu-init.c miscops.c deprecate.c \
+				round.c
 
 lib_LIBRARIES             = libshmemu.a
 libshmemu_a_SOURCES       = $(LIBSHMEMU_SOURCES)
