Name change inside barrier
Add sync call

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -11,6 +11,7 @@ LIBSHMEMC_SOURCES         = \
 				ucx-init.c \
 				ranks.c \
 				barrier.c \
+				sync.c \
 				broadcast.c \
 				comms.c \
 				waituntil.c \
