--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -41,6 +41,7 @@ MY_SOURCES             = \
                                 quiet.c \
                                 reductions.c \
                                 shmalloc.c \
+				sync.c \
                                 version.c \
                                 waituntil.c
 MY_SOURCES            += dlmalloc.c
